<resources>
    <string name="app_name">SMSRouter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="send_btn">\></string>
    <string name="enter_msg">Enter message:</string>
    <string name="phone_hint">Number</string>
    <string name="network_header">Network:</string>
</resources>
