<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffCCCCCC" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/messageText"
        android:layout_alignParentStart="true"
        android:background="#ffffffff"
        android:layout_alignParentBottom="true"
        android:minLines="1"
        android:maxLines="3"
        android:hint="@string/enter_msg"
        android:capitalize="sentences"
        android:layout_toStartOf="@+id/sendButton"
        android:padding="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_btn"
        android:id="@+id/sendButton"
        android:layout_alignTop="@+id/messageText"
        android:layout_alignParentEnd="true"
        android:padding="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_alignStart="@+id/messageText"
        android:layout_alignBottom="@+id/numberSpinner"
        android:layout_alignTop="@+id/numberSpinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberSpinner"
        android:layout_above="@+id/messageText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:spinnerMode="dropdown" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numbersList"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/heading"
        android:layout_above="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_header"
        android:id="@+id/heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_alignBottom="@+id/fromNumberText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/fromNumberText"
        android:layout_above="@+id/numberSpinner"
        android:layout_alignEnd="@+id/sendButton"
        android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>
